--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -23,19 +23,19 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
                         <li id ="HomeNav" class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-page="/Index">Home</a>
+                            <a class="nav-link text-light" asp-controller="App" asp-action="Index">Home</a>
                         </li>
                         <li id ="RecipesNav" class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-page="/Recipes">Recipes</a>
+                            <a class="nav-link text-light" asp-controller="App" asp-action="Recipes">Recipes</a>
                         </li>
                         <li id ="AboutNav" class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-page="/AboutUs">About us</a>
+                            <a class="nav-link text-light" asp-controller="App" asp-action="AboutUs">About us</a>
                         </li>
                         <li id ="ContactNav" class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-page="/Contact">Contact</a>
+                            <a class="nav-link text-light" asp-controller="App" asp-action="Contact">Contact</a>
                         </li>
                         <li id ="SignNav" class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-page="/SignIn">Sign in</a>
+                            <a class="nav-link text-light" asp-controller="App" asp-action="SignIn">Sign in</a>
                         </li>
                     </ul>
                 </div>
@@ -50,7 +50,7 @@
 
     <footer class="border-top footer text-light bg-dark">
         <div class="d-flex justify-content-center align-items-center">
-            &copy; 2022 - FoodEater - <a asp-area="" asp-page="/Privacy">Privacy</a>
+            &copy; 2022 - FoodEater -&nbsp;<a asp-controller="App" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
 
