10. Replacing current template CSS with Bootstrap 11. Adding socials in footer - Fontawesome 12. Styling Contact view with Bootstrap

--- a/Views/App/Recipes.cshtml
+++ b/Views/App/Recipes.cshtml
@@ -17,5 +17,5 @@
         <li>Fats LA (Omega-6): 21%</li>
         <li>Fats ALA (Omega-3): 20%</li>
     </ul>
-    <button>See details!</button>
+    <button class="btn btn-dark">See details!</button>
 </div>
