--- a/Views/App/Contact.cshtml
+++ b/Views/App/Contact.cshtml
@@ -9,34 +9,37 @@
 }
 
 
-<button id="contactUsButton">Contact Us!</button>
-<div id="contactUsForm">
-    <form method="post">
-        <div asp-validation-summary="ModelOnly"></div>
-        <br />
-        <!-- Thanks to below way of using TagHelpers on label we set focus to
-        input after clicking on input label - very good for mobile/touchscreens -->
-        <label asp-for="Name">Your name:</label>
-        <br />
-        <input asp-for="Name" />
-        <span asp-validation-for="Name"></span>
-        <br />
-        <label asp-for="Email">Email:</label>
-        <br />
-        <input asp-for="Email" type="email" />
-        <span asp-validation-for="Email"></span>
-        <br />
-        <label asp-for="Subject">Subject:</label>
-        <br />
-        <input asp-for="Subject" type="text" />
-        <span asp-validation-for="Subject"></span>
-        <br />
-        <label asp-for="Message">Message:</label>
-        <br />
-        <textarea asp-for="Message" rows="4"></textarea>
-        <span asp-validation-for="Message"></span>
-        <br />
-        <input type="submit" value="Send Message" />
-        <div>@ViewBag.UserMessage</div>
-    </form>
+<button class="btn btn-dark" id="contactUsButton">Contact Us!</button>
+<div class="col-md-6 offset-md-3" id="contactUsForm">
+    <div class="card card-body bg-dark text-light">
+        <form method="post">
+            <div asp-validation-summary="ModelOnly"></div>
+            <!-- Thanks to below way of using TagHelpers on label we set focus to
+    input after clicking on input label - very good for mobile/touchscreens -->
+            <div class="form-group">
+                <label asp-for="Name">Your name:</label>
+                <input asp-for="Name" class="form-control" />
+                <span asp-validation-for="Name" class="text-warning"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Email">Email:</label>
+                <input asp-for="Email" type="email" class="form-control" />
+                <span asp-validation-for="Email" class="text-warning"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Subject">Subject:</label>
+                <input asp-for="Subject" type="text" class="form-control" />
+                <span asp-validation-for="Subject" class="text-warning"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Message">Message:</label>
+                <textarea asp-for="Message" rows="5" class="form-control"></textarea>
+                <span asp-validation-for="Message" class="text-warning"></span>
+            </div>
+            <div class="form-group">
+                <button type="submit" class="btn btn-dark"><a class="fas fa-envelope fa-1x"></a> Send Message</button>
+                <div class="text-success">@ViewBag.UserMessage</div>
+            </div>
+</form>
+    </div>
 </div>
