--- a/Views/App/SignIn.cshtml
+++ b/Views/App/SignIn.cshtml
@@ -7,24 +7,26 @@
 
 
 <div>
-    <div id="loginToggle">
-        Login
+    <div class="container">
+        <button class="btn btn-dark" id="loginToggle">Login</button>
     </div>
-    <form class="popup-form">
-        <div>
-            <label>Username:</label>
-            <input />
-        </div>
-        <div>
-            <label>Password:</label>
-            <input type="password" />
-        </div>
-        <div>
-            <input type="checkbox" />
-            <label>Remember me?</label>
-        </div>
-        <div>
-            <input type="submit" value="login" />
-        </div>
-    </form>
+    <div class="container">
+        <form class="popup-form">
+            <div>
+                <label>Username:</label>
+                <input />
+            </div>
+            <div>
+                <label>Password:</label>
+                <input type="password" />
+            </div>
+            <div>
+                <input type="checkbox" />
+                <label>Remember me?</label>
+            </div>
+            <div>
+                <input class="btn btn-dark" type="submit" value="login" />
+            </div>
+        </form>
+    </div>
 </div>
