--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 @using FoodEaterRecipes.Controllers
 @using FoodEaterRecipes.Models
+@using FoodEaterRecipes.Data.Entities
 @namespace FoodEaterRecipes.Views
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
