27. Creating API consuming method - Searching Ingredients by Name 28. Cards design - better bootstrap code in recipes view

--- a/Views/App/AboutUs.cshtml
+++ b/Views/App/AboutUs.cshtml
@@ -1,7 +1,29 @@
-﻿@{
+﻿@model FoodEaterRecipes.Models.IngredientsSearchAPI
+@{
     ViewData["Title"] = "About us";
 }
 @section Scripts {
     @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
 }
 <p>Nothing here yet...</p>
+
+<div class="form-horizontal">
+    <hr />
+    <div class="form-group">
+        <table class="table table-responsive" style="width:400px">
+            <tr>
+                <th>
+                    @Html.DisplayName("Name")
+                </th>
+            </tr>
+            @foreach (var item in Model.Common)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Food_name)
+                    </td>
+                </tr>
+            }
+        </table>
+    </div>
+</div>
