--- a/Views/App/Recipes.cshtml
+++ b/Views/App/Recipes.cshtml
@@ -1,21 +1,36 @@
-﻿@model IEnumerable<Recipe>
+﻿@model RecipeDTO
 @{
     ViewData["Title"] = "Recipes";
 }
 @section Scripts {
     @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
+    <script src="~/lib/jqueryui/jquery-ui.js"></script>
+    <link href="~/lib/jqueryui/themes/smoothness/jquery-ui.css" rel="stylesheet" />
 }
 
+
+<div class="container">
+    <form method="post">
+        <div class="form-group">
+            @Html.EditorFor(model => model.Name , new { htmlAttributes = new { @class = "form-control", @id = "SearchInputRecipes", @placeholder = "Search..." } })
+        </div>
+        <div class="form-group">
+            <button type="submit" class="btn btn-dark"><a class="fas fa-search fa-1x"></a> Search</button>
+        </div>
+    </form>
+</div>
+
+
 <div class="row">
-    @foreach (var r in Model)
+    @foreach (var r in ViewBag.SearchResultRecipes)
     {
-        <div class="card col-md-3 recipe-info m-1 p-0 bg-dark text-white">
-            <img class="card-img-top img-fluid text-center" style=" width: 100%; max-height: 400px; object-fit: cover;" src="~/src/@(r.Id).jpg" alt="@r.Name"/>
+        <div class="card col-md-3 recipe-info m-2 p-0 bg-dark text-white shadow-lg border-0">
+            <img class="card-img-top img-fluid text-center" style=" width: 100%; max-height: 400px; object-fit: cover;" src="~/src/@(r.Id).jpg" alt="@r.Name" />
             <div class="card-body text-center">
                 <h4 class="card-title text-left">@r.Name</h4>
                 <p class="card-text text-left">@r.Description</p>
             </div>
-            
+
             <a href="#" class="card-footer btn btn-outline-info border-secondary border-left-0 border-right-0 rounded-0">See this recipe!</a>
             <div class="card-footer text-center text-muted"><small>Last updated: @r.UpdateDT</small></div>
         </div>
