--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,4 +1,50 @@
 ﻿
+/*AUTOCOMPLETE SELECTORS*/
+.ui-autocomplete {
+    z-index: 1000 !important;
+    margin: 10px 0 0 !important;
+    list-style: none !important;
+    font-size: 16px !important;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif !important;
+    background-color: #f5f5f5 !important;
+    border: 1px solid rgb(0 38 255) !important;
+    border-radius: 4px !important;
+    -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175) !important;
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175) !important;
+    background-clip: padding-box !important;
+}
+
+    .ui-autocomplete > li > div {
+        display: block !important;
+        padding: 3px 20px !important;
+        clear: both !important;
+        font-weight: normal !important;
+        line-height: 1.42857143 !important;
+        color: #333333 !important;
+        white-space: nowrap !important;
+    }
+
+.ui-state-hover,
+.ui-state-active,
+.ui-state-focus {
+    text-decoration: none !important;
+    color: rgb(0 0 0) !important;
+    background-color: rgb(0 0 0) !important;
+    cursor: pointer !important;
+}
+
+.ui-helper-hidden-accessible {
+    border: 0 !important;
+    clip: rect(0 0 0 0) !important;
+    height: 1px !important;
+    margin: -1px !important;
+    overflow: hidden !important;
+    padding: 0 !important;
+    position: absolute !important;
+    width: 1px !important;
+}
+
+
 /* Provide sufficient contrast against white background */
 /*a {
   color: #0366d6;
