--- a/Views/App/Contact.cshtml
+++ b/Views/App/Contact.cshtml
@@ -35,7 +35,7 @@
                 <span asp-validation-for="Message" class="text-warning"></span>
             </div>
             <div class="form-group">
-                <button type="submit" class="btn btn-dark"><a class="fas fa-envelope fa-1x"></a> Send Message</button>
+                <button type="submit" class="btn btn-dark"><i class="fas fa-envelope fa-1x"></i> Send Message</button>
                 <div class="text-success">@ViewBag.UserMessage</div>
             </div>
         </form>
