--- a/Views/App/Create.cshtml
+++ b/Views/App/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Common
+﻿@model IngredientCompositionDTO
 @{
     ViewData["Title"] = "Recipe creator";
 }
@@ -10,12 +10,17 @@
 
 
 <div class="container">
-    <form method="post">
-        <div class="form-group">
-            @Html.EditorFor(model => model.Food_name, new { htmlAttributes = new { @class = "form-control", @id = "SearchInputIngredient", @placeholder = "Search..." } })
+    <div class="row">
+        <div class="col p-1 m-0 d-inline-block text-dark">
+            @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control p-2 m-0", @id = "SearchInputIngredient", @placeholder = "Search..." } })
         </div>
-        <div class="form-group">
-            <button type="submit" class="btn btn-dark"><i class="fas fa-search fa-1x"></i> Search</button>
+        
+        <div class="col col-2 col-md-1 p-1 m-0 d-inline-block">
+            <button class="btn btn-light btn-block" id="addIngredientBtn"><i class="fas fa-plus fa-1x"></i> </button>
         </div>
-    </form>
+
+        <div class="col col-12 col-md-6 p-1 m-0 d-inline-block text-center">
+            <p class="p-0 m-0 bg-dark rounded" id="ingredientAdded" style="height: 38px;">Testowy div!</p>     
+        </div>
+    </div>
 </div>
