--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -45,6 +45,12 @@
 }
 
 
+#ingredientAdded {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 /* Provide sufficient contrast against white background */
 /*a {
   color: #0366d6;
