43. Creating angular components - ingredientCreator & recipeCreator 44. Fixing bugs & refactoring 45. Changing favicon 46. Adding MaterialUI Angular library 47. ingredientCreator ingredient search and modification

--- a/Views/App/Create.cshtml
+++ b/Views/App/Create.cshtml
@@ -14,7 +14,8 @@
     <link href="~/client/styles.css" rel="stylesheet" />
 }
 
-<app-recipe-creator></app-recipe-creator>
+@* Angular injection *@
+<app-recipe-creator></app-recipe-creator> 
 
 
 @*<div class="container">
