--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,60 +1,69 @@
-﻿<!DOCTYPE html>
+﻿@section Scripts {
+    @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
+}
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FoodEater - @ViewData["Title"]</title>
-    <link href="~/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link rel="icon" href="@Url.Content("~/favicon.ico")" />
+    @*<link href="~/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />*@
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="~/lib/fortawesome/fontawesome-free/css/all.css" rel="stylesheet" />
     <link href="~/css/site.css" rel="stylesheet" />
-    @RenderSection("head",false)
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    @RenderSection("head", false)
+
 </head>
 <body class="bg-secondary">
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom border-dark box-shadow mb-3 shadow">
             <div class="container">
-                    <button class="navbar-toggler"
-                            type="button"
-                            data-toggle="collapse"
-                            data-target=".navbar-collapse"
-                            aria-controls="navbarSupportedContent"
-                            aria-expanded="false"
-                            aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="navbar-collapse collapse d-sm-inline-flex">
-                        <ul class="navbar-nav flex-grow-1 ml-auto">
-                            <li id="HomeNav" class="nav-item">
-                                <a class="nav-link text-light" asp-controller="App" asp-action="Index">Home</a>
-                            </li>
-                            <li id="RecipesNav" class="nav-item">
-                                <a class="nav-link text-light" asp-controller="App" asp-action="Recipes">Recipes</a>
-                            </li>
-                            <li id="AboutNav" class="nav-item">
-                                <a class="nav-link text-light" asp-controller="App" asp-action="AboutUs">About us</a>
-                            </li>
-                            <li id="ContactNav" class="nav-item">
-                                <a class="nav-link text-light" asp-controller="App" asp-action="Contact">Contact</a>
-                            </li>
-                        </ul>
-                        <ul class="navbar-nav mr-auto">
-                            @*PRZYLEGANIE DO PRAWEJ*@
+                <button class="navbar-toggler"
+                        type="button"
+                        data-toggle="collapse"
+                        data-target=".navbar-collapse"
+                        aria-controls="navbarSupportedContent"
+                        aria-expanded="false"
+                        aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="navbar-collapse collapse d-sm-inline-flex">
+                    <ul class="navbar-nav flex-grow-1 ml-auto">
+                        <li id="HomeNav" class="nav-item">
+                            <a class="nav-link text-light" asp-controller="App" asp-action="Index">Home</a>
+                        </li>
+                        <li id="RecipesNav" class="nav-item">
+                            <a class="nav-link text-light" asp-controller="App" asp-action="Recipes">Recipes</a>
+                        </li>
+                        <li id="AboutNav" class="nav-item">
+                            <a class="nav-link text-light" asp-controller="App" asp-action="AboutUs">About us</a>
+                        </li>
+                        <li id="ContactNav" class="nav-item">
+                            <a class="nav-link text-light" asp-controller="App" asp-action="Contact">Contact</a>
+                        </li>
+                    </ul>
+                    <ul class="navbar-nav mr-auto">
+                        @*PRZYLEGANIE DO PRAWEJ*@
 
-                            @if (User.Identity.IsAuthenticated)
-                            {
+                        @if (User.Identity.IsAuthenticated)
+                        {
 
-                                <li id="SignNav" class="nav-item">
-                                    <a class="nav-link text-light" asp-controller="Account" asp-action="Logout">Logout</a>
-                                </li>
-                            }
-                            else
-                            {
-                                <li id="SignNav" class="nav-item">
-                                    <a class="nav-link text-light" asp-controller="Account" asp-action="Login">Login</a>
-                                </li>
-                            }
-                        </ul>
-                    </div>
+                            <li id="SignNav" class="nav-item">
+                                <a class="nav-link text-light" asp-controller="Account" asp-action="Logout">Logout</a>
+                            </li>
+                        }
+                        else
+                        {
+                            <li id="SignNav" class="nav-item">
+                                <a class="nav-link text-light" asp-controller="Account" asp-action="Login">Login</a>
+                            </li>
+                        }
+                    </ul>
+                </div>
             </div>
         </nav>
     </header>
