--- a/client/src/app/views/ingredientCreator.component.html
+++ b/client/src/app/views/ingredientCreator.component.html
@@ -1,5 +1,7 @@
-﻿<div class="row">
-    <div class="container">
+﻿<div class="row border border-dark rounded-lg p-3 m-1">
+    <h5 class="h3">Ingredient</h5>
+    <mat-divider></mat-divider><br>
+    <div class="container p-0 m-0">
         <!--<div class="col p-1 m-0 d-inline-block text-dark">-->
         <!--Zamieniam wersję ASP.NET na Angularową-->
         <!--@Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control p-2 m-0", @id = "SearchInputIngredient", @placeholder = "Search..." }});-->
@@ -9,8 +11,8 @@
             <mat-form-field>
                 <input type="text" name="prefix" [(ngModel)]="prefix" (ngModelChange)="updateIngredientList(prefix)" matInput [matAutocomplete]="auto" placeholder="Search ingredient" />
                 <mat-autocomplete #auto="matAutocomplete" panelWidth="auto" (optionSelected)="setTemplateIngredient($event.option.value)">
-                    <mat-option *ngFor="let ingredient of creator.ingredients" [value]="ingredient.name">
-                        {{ingredient.name}}
+                    <mat-option *ngFor="let i of creator.ingredients" [value]="i.name">
+                        {{i.name}}
                     </mat-option>
                 </mat-autocomplete>
             </mat-form-field>
@@ -18,22 +20,41 @@
 
 
         <div class="col col-2 col-md-3 p-0 m-0 d-inline-block">
-            <button class="btn btn-light btn-block" id="addIngredientBtn"><i class="fas fa-plus fa-1x"></i> </button>
+            <button class="btn btn-light btn-block" id="addIngredientBtn" (click)="addIngredient(ingredientTemplate)"><i class="fas fa-plus fa-1x"></i> </button>
         </div>
 
 
-        <div class="col col-12 p-0 m-0 d-inline-block text-center bg-dark rounded">
-            <p class="p-0 m-0" id="ingredientAdded" style="height: 38px;">Testowy div!</p>
+        <div class="col col-12 p-0 m-0 d-inline-block bg-dark rounded m-0 p-1">
+            <div class="col col-6 m-0 p-0 d-inline-block">
+                <form class="m-1 p-1">
+                    <mat-form-field>
+                        <input matInput class="mat-form-field m-0 p-1" required type="text" placeholder="Name" [(ngModel)]="ingredientTemplate.name" name="name" />
+                    </mat-form-field>
+                    <mat-form-field>
+                        <input matInput class="mat-form-field m-0 p-1" numbersOnly required type="number" placeholder="Weight (g)" [(ngModel)]="ingredientTemplate.weight" name="weight" />
+                    </mat-form-field>
+                    <mat-form-field>
+                        <input matInput class="mat-form-field m-0 p-1" numbersOnly required type="number" placeholder="Kcal per 100g" [(ngModel)]="ingredientTemplate.kcal" name="kcal" />
+                    </mat-form-field>
+                    <mat-form-field>
+                        <input matInput class="mat-form-field m-0 p-1" numbersOnly required type="number" placeholder="Carbohydrates per 100g" [(ngModel)]="ingredientTemplate.carbs" name="carbs" />
+                    </mat-form-field>
+                    <mat-form-field>
+                        <input matInput class="mat-form-field m-0 p-1" numbersOnly required type="number" placeholder="Fats per 100g" [(ngModel)]="ingredientTemplate.fats" name="fats" />
+                    </mat-form-field>
+                    <mat-form-field>
+                        <input matInput class="mat-form-field m-0 p-1" numbersOnly required type="number" placeholder="Proteins per 100g" [(ngModel)]="ingredientTemplate.proteins" name="proteins" />
+                    </mat-form-field>
+                </form>
+            </div>
 
-
-            <form class="col col-12">
-                <input type="text" [(ngModel)]="ingredientSelectedIntoForm.name" name="name" />
-                <input type="text" [(ngModel)]="ingredientSelectedIntoForm.kcal" name="kcal" />
-                <input type="text" [(ngModel)]="ingredientSelectedIntoForm.carbs" name="carbs" />
-                <input type="text" [(ngModel)]="ingredientSelectedIntoForm.fats" name="fats" />
-                <input type="text" [(ngModel)]="ingredientSelectedIntoForm.proteins" name="proteins" />
-            </form>
+            <!--<div class="col col-6 m-0 p-0 d-inline-block position-top">
+                <mat-list>
+                    <mat-list-item> Pepper </mat-list-item>
+                    <mat-list-item> Salt </mat-list-item>
+                    <mat-list-item> Paprika </mat-list-item>
+                </mat-list>
+            </div>-->
         </div>
-
     </div>
 </div>
