--- a/wwwroot/client/styles.css
+++ b/wwwroot/client/styles.css
@@ -2962,7 +2962,15 @@ html, body { height: 100%; }
 }
 
 mat-divider {
-    width: 100%;
+    width: 100% !important;
+}
+
+.mat-row {
+    height: auto !important;
+}
+
+.mat-cell {
+    padding: 8px 8px 8px 8px !important;
 }
 
 /*# sourceMappingURL=styles.css.map*/
